<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/esquinas_redondeadas_blanco"
    android:orientation="vertical"
    tools:context=".views.clientes.DatosPersonalesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/personal"
        android:textSize="25dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:background="@drawable/esquinas_superiores_redondeadas_verde"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:text="@string/editar"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_nombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_apellido"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/apellidoM">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidoM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#757575"
            tools:ignore="DuplicateIds" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_apellidoP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/apellidoP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="end"
        android:layout_gravity="bottom">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Cancelar"
            android:textAllCaps="false"
            app:backgroundTint="@color/verde"
            android:layout_margin="10dp"
            app:layout_constraintVertical_bias="0.89" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guardar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Guardar"
            android:textAllCaps="false"
            app:backgroundTint="@color/verde"
            android:layout_margin="10dp"
            app:layout_constraintVertical_bias="0.883" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat >