<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backround"
    tools:context=".views.clientes.VerClienteActivity">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/esquinas_redondeadas_blanco"
        android:elevation="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cliente"
                android:background="@drawable/circulo_verde2"
                android:layout_margin="10dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="16dp"
                tools:ignore="MissingConstraints" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                tools:ignore="MissingConstraints" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/personales"
            android:layout_width="85dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/esquinas_redondeadas_blanco"
            android:elevation="7dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circulo_rosa_bajo"
                android:src="@drawable/personal"
                android:scaleType="fitCenter" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/personal"
                android:textSize="17sp"
                android:typeface="serif"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/medicos"
            android:layout_width="85dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/esquinas_redondeadas_blanco"
            android:elevation="7dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circulo_azul_bajo"
                android:src="@drawable/medico"
                android:scaleType="fitCenter" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/medicos"
                android:textSize="17sp"
                android:typeface="serif"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/contacto"
            android:layout_width="85dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/esquinas_redondeadas_blanco"
            android:elevation="7dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circulo_naranja_bajo"
                android:src="@drawable/contacto"
                android:scaleType="fitCenter" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/contacto"
                android:textSize="17sp"
                android:typeface="serif"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ubicacion"
            android:layout_width="85dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/esquinas_redondeadas_blanco"
            android:elevation="7dp"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circulo_verde_bajo"
                android:src="@drawable/ubicacion"
                android:scaleType="fitCenter" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/ubicacion"
                android:textSize="17sp"
                android:typeface="serif"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>